# scholaria

./: .coverage  .env  .env.example  .env.prod  .env.prod.example  .gitignore  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile.admin  Dockerfile.backend  Dockerfile.backup  Dockerfile.dev  Dockerfile.frontend  Dockerfile.prod  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prometheus.yml  pyproject.toml  pyrightconfig.json  pytest.ini  test_write.db
.agents/: AGENTS.md
.agents/00-foundations/: AG-FOUND-DOCKER-STACK-001.md  AG-FOUND-DOCS-001.md  AG-FOUND-INTENT-001.md  AG-FOUND-SCRIPTS-001.md
.agents/10-policies/: AG-POLICY-BRANCH-001.md  AG-POLICY-CACHE-BEHAVIOR-001.md  AG-POLICY-DEV-GUARDRAILS-001.md  AG-POLICY-DOCKER-CONSTRAINTS-001.md  AG-POLICY-DOCS-QUALITY-001.md  AG-POLICY-SCHEMA-GUIDELINES-001.md  AG-POLICY-SCRIPTS-QUALITY-001.md
.agents/20-workflows/: AG-WORKFLOW-ALEMBIC-001.md  AG-WORKFLOW-DEV-LOOP-001.md  AG-WORKFLOW-DOCKER-DEV-001.md  AG-WORKFLOW-DOCS-MAINTENANCE-001.md  AG-WORKFLOW-FASTAPI-OPS-001.md  AG-WORKFLOW-RAG-PIPELINE-001.md  AG-WORKFLOW-RAG-TESTS-001.md  AG-WORKFLOW-RSP-I-001.md  AG-WORKFLOW-SCRIPTS-DOCKER-ENTRYPOINT-001.md  AG-WORKFLOW-SCRIPTS-USAGE-001.md
.agents/90-overrides/: AG-OVERRIDE-CHANGELOG-001.md  AG-OVERRIDE-DOCKER-CHANGELOG-001.md  AG-OVERRIDE-DOCS-CHANGELOG-001.md  AG-OVERRIDE-SCRIPTS-CHANGELOG-001.md
.agents/_archive/: README.md
.agents/docker/: AGENTS.md
.agents/docs/: AGENTS.md
.agents/scripts/: AGENTS.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: backend-ci.yml  ci.yml  e2e-tests.yml  frontend-ci.yml  pr.yml  release.yml  security.yml
.spec/backend/: admin-api.spec.md  auth.spec.md  rag-api.spec.md
.tasks/: TASKS.md  TASKS_ARCHIVE_INDEX.md
.tasks/backend-tooling-restructure/: PLAN.md  PROGRESS.md  RESEARCH.md  SPEC-DELTA.md
.tasks/celery-worker-docker-fix/: ISSUE.md  PLAN.md  PROGRESS.md  RESEARCH.md  SPEC-DELTA.md
.tasks/e2e-testing-playwright/: IMPROVEMENT_PLAN.md  PLAN.md  PROGRESS.md  TEST_STATUS.md
.tasks/frontend-test-coverage-expansion/: PLAN.md  PROGRESS.md
.tasks/frontend-testing-phase-0/: PROGRESS.md
.tasks/frontend-testing-plan/: PROGRESS.md  RESEARCH.md
.tasks/golden-dataset-benchmark/: PLAN.md  PROGRESS.md  RESEARCH.md
.tasks/observability-opentelemetry/: PLAN.md  PROGRESS.md  RESEARCH.md  SPEC-DELTA.md
.tasks/performance-validation/: RESEARCH.md
.tasks/react-router-v7-upgrade/: PROGRESS.md  TASK_SUMMARY.md
.tasks/refine-admin-panel/: PLAN.md  PROGRESS.md
admin-frontend/: README.md  package-lock.json  package.json
admin-frontend/src/: App.tsx
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_add_topic_slug.py  0004_add_contextitem_order_index.py  990a42024f17_add_feedback_score.py
api/: README.md  config.py  main.py
api/auth/: utils.py
api/dependencies/: auth.py  redis.py
api/models/: __init__.py  associations.py  base.py  context.py  history.py  (+2 more)
backend/: README.md  celery_app.py  config.py  main.py  observability.py  pyproject.toml  pyrightconfig.json
backend/alembic/versions/: 0003_add_order_index_to_contextitem.py  e26f3ba7cd58_add_feedback_comment_to_question_history.py
backend/auth/: __init__.py  utils.py
backend/dependencies/: auth.py  redis.py
backend/ingestion/: chunkers.py  parsers.py  strategies.py
backend/models/: __init__.py  associations.py  base.py  context.py  history.py  topic.py  user.py
backend/retrieval/: cache.py  embeddings.py  monitoring.py  qdrant.py  reranking.py
backend/routers/: auth.py  contexts.py  history.py  rag.py  rag_streaming.py  setup.py  topics.py
backend/routers/admin/: __init__.py  analytics.py  bulk_operations.py  contexts.py  topics.py
backend/schemas/: README.md  admin.py  context.py  history.py  rag.py  topic.py  utils.py
backend/services/: ingestion.py  rag_service.py  slug_utils.py
backend/tasks/: embeddings.py
backend/tests/: __init__.py  conftest.py  test_alembic_migrations.py  test_alembic_setup.py  test_app_cors.py  test_auth.py  test_celery_app.py  test_celery_tasks.py  test_config.py  test_contexts.py  test_contexts_write.py  test_embedding_cache.py  test_feedback.py  test_golden_accuracy.py  test_golden_integration.py  test_grafana_integration.py  test_history_read.py  test_history_session.py  test_ingestion_service.py  test_ingestion_strategies.py  test_jaeger_integration.py  test_metrics_endpoint.py  test_no_django_dependencies.py  test_observability.py  test_observability_performance.py  test_openai_usage_monitor_metrics.py  test_performance_benchmark.py  test_prometheus_integration.py  test_rag_endpoint.py  test_rag_metrics.py  test_rag_streaming.py  test_setup.py  test_slug_utils.py  test_topic_slug_routes.py  test_topics_poc.py  test_webscraper_chunker.py  test_webscraper_parser.py
backend/tests/admin/: test_admin_contexts.py  test_admin_topics.py  test_analytics.py  test_bulk_operations.py  test_context_topic_relationships.py
backend/tests/fixtures/: fake_contexts_data.json  golden_dataset.json
core/: celery.py  health.py  integration_settings.py  logging.py  production_settings.py  settings.py  test_settings.py  urls.py
docs/: ADMIN_GUIDE.md  ARCHITECTURE_DECISIONS.md  BACKUP_STRATEGY.md  CONTRIBUTING.md  DEPLOYMENT.md  ENVIRONMENT.md  OBSERVABILITY.md  PRODUCTION_DOCKER.md  TESTING_STRATEGY.md  USER_GUIDE.md  backup-strategy.md  prd.md  tasks.md
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
nginx/: admin-frontend.conf  nginx.conf
rag/: AGENTS.md  admin.py  exceptions.py  models.py  storage.py  tasks.py  tests.py  urls.py  validators.py  views.py  web_urls.py
scripts/: backup-scheduler.sh  backup.sh  deploy.sh  postgres-init.sql  precommit_mypy.sh  restore.sh  run_integration_tests_only.sh  test-backup-restore.sh  test-fast.sh  test-slow.sh  test-unit.sh  test_docker_integration.sh
templates/: base.html
(+486 files in other folders)
