[project]
name = "scholaria"
version = "0.1.0"
description = "School Integrated RAG System - MVP-first, TDD-driven development"
readme = "README.md"
authors = [
    { name = "Kang, Donguk", email = "kangdongouk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "psycopg[binary]>=3.1.0",
    "qdrant-client>=1.6.0",
    "openai>=1.0.0",
    "unstructured[all-docs]>=0.10.0",
    "llama-index>=0.9.0",
    "sentence-transformers>=2.2.0",
    "minio>=7.1.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "pytest-django>=4.8.0",
    "pytest-celery>=0.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "mypy>=1.8.0",
    "django-stubs>=4.2.0",
    "djangorestframework-stubs>=3.14.0",
    "types-redis>=4.6.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "rag"]

# Ruff configuration
[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
    "migrations",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by line-length)
    "B008",  # do not perform function calls in argument defaults
    "F403",  # star imports (common in Django settings)
    "F405",  # undefined names from star imports
]

[tool.ruff.lint.isort]
known-first-party = ["core", "rag"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

# MyPy configuration
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_unreachable = true

# Django-specific settings
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "core.settings"

# Per-module mypy settings
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "qdrant_client.*",
    "unstructured.*",
    "sentence_transformers.*",
    "llama_index.*",
    "minio.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["rag/tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--reuse-db",
]
env = [
    "DB_ENGINE=django.db.backends.sqlite3",
    "DB_NAME=:memory:",
    "QDRANT_COLLECTION_NAME=context_items",
    "OPENAI_EMBEDDING_DIM=4",
]
